--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <title>Portifólio Ariane Welke</title>
 
         <!--CSS-->
-        <link rel="stylesheet" href="css/extends.css" />
+        <link rel="stylesheet" href="CSS/extends.css" />
 
         <!--Fonts-->
         <link real="preconnect" href="https://fonts.googleapis.com" />
